--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "umomega-tags",
-    "version": "1.4.1",
+    "version": "1.4.2",
     "description": "Tags UI Components For umΩ Apps",
     "main": "tags-ui.js",
     "repository": {
@@ -30,5 +30,7 @@
         "README.md",
         "tags-ui.js"
     ],
-    "dependencies": {}
+    "dependencies": {
+        "umomega-foundation": "^1.19.6"
+    }
 }
